// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-text> Component All caps xxlarge bold quote using <bolt-text> w/ Shadow DOM renders 2`] = `
<bolt-text
  align="center"
  font-size="xxlarge"
  font-weight="bold"
  letter-spacing="wide"
  quoted="true"
  style=""
  text-transform="uppercase"
>
  This is a quote
</bolt-text>
`;

exports[`<bolt-text> Component All caps xxlarge bold quote using <bolt-text> w/o Shadow DOM renders 2`] = `
<bolt-text
  align="center"
  font-size="xxlarge"
  font-weight="bold"
  letter-spacing="wide"
  quoted="true"
  style=""
  text-transform="uppercase"
>
  <!---->
  
      
      
            
            
  <p
    class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xxlarge c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-body c-bolt-text-v2--letter-spacing-wide c-bolt-text-v2--align-center c-bolt-text-v2--text-transform-uppercase c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100 c-bolt-text-v2--quoted"
    style=""
  >
    <!---->
    <!---->
    <!---->
    This is a quote
    <!---->
    <!---->
    <!---->
  </p>
  
          
          
    
  <!---->
</bolt-text>
`;

exports[`<bolt-text> Component Code text using <bolt-text> w/ Shadow DOM renders 2`] = `
<bolt-text
  font-family="code"
  style=""
>
  This is code text
</bolt-text>
`;

exports[`<bolt-text> Component Default <bolt-text> w/ Shadow DOM renders 2`] = `
<bolt-text
  style=""
>
  This is regular text
</bolt-text>
`;

exports[`<bolt-text> Component Long xxxlarge headline using <bolt-text> w/ Shadow DOM renders 2`] = `
<bolt-text
  font-size="xxxlarge"
  headline="true"
  style=""
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in gravida ex.
</bolt-text>
`;

exports[`<bolt-text> Component Long xxxlarge headline using <bolt-text> w/o Shadow DOM renders 2`] = `
<bolt-text
  font-size="xxxlarge"
  headline="true"
  style=""
>
  <!---->
  
      
      
            
            
  <h2
    class="is-long c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--headline c-bolt-text-v2--font-size-xxxlarge c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-narrow c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
    style=""
  >
    <!---->
    <!---->
    <!---->
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in gravida ex.
    <!---->
    <!---->
    <!---->
  </h2>
  
          
          
    
  <!---->
</bolt-text>
`;

exports[`<bolt-text> Component Multiple <bolt-text> elements w/ Shadow DOM render 2`] = `
<div
  style=""
>
  <bolt-text
    style=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </bolt-text>
  <bolt-text
    style=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </bolt-text>
</div>
`;

exports[`<bolt-text> Component xxxlarge headline using <bolt-text> w/ Shadow DOM renders 2`] = `
<bolt-text
  font-size="xxxlarge"
  headline="true"
  style=""
>
  This is xxxlarge headline
</bolt-text>
`;

exports[`<bolt-text> Component xxxlarge headline using <bolt-text> w/o Shadow DOM renders 2`] = `
<bolt-text
  font-size="xxxlarge"
  headline="true"
  style=""
>
  <!---->
  
      
      
            
            
  <h2
    class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--headline c-bolt-text-v2--font-size-xxxlarge c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-narrow c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
    style=""
  >
    <!---->
    <!---->
    <!---->
    This is xxxlarge headline
    <!---->
    <!---->
    <!---->
  </h2>
  
          
          
    
  <!---->
</bolt-text>
`;
